# thesis

./: .gitignore  INSTALL.md  README.md  backend.Dockerfile  docker-compose.yaml  pyproject.toml  setup.py
VLSAM_fine-tuning/: bridge_2.py  dinov3_sam2_bridge.py  overfit_test.py  train_bridge.py  train_bridge_2.py  visualize.py
checkpoints/: download_ckpts.sh
debug_vlsam/: binary_inverted.npy  binary_sig.npy
demo/: README.md
demo/backend/: download_boxes.py  download_frames.py  download_masks.py  masks_to_boxes.py  viz_boxes.py
demo/backend/server/: app.py  app_conf.py
demo/backend/server/data/: data_types.py  loader.py  schema.py  store.py  transcoder.py
demo/backend/server/inference/: api.py  data_types.py  downloaders.py  inference_operations.py  mask_utils.py  model_loader.py  multipart.py  predictor.py  session_manager.py  state_persistor.py  video_reader.py
demo/frontend/: frontend.Dockerfile  schema.graphql
demo/frontend/schemas/: app-api-schema.graphql
demo/frontend/src/common/api/: downloadApi.ts
demo/frontend/src/common/components/annotations/: AddObjectButton.tsx  MobileObjectsList.tsx  MobileObjectsToolbar.tsx  ObjectNameModal.tsx  ObjectUtils.ts  ObjectsToolbar.tsx  ObjectsToolbarBottomActions.tsx  ProceedToDownload.tsx  ToolbarObject.tsx  TrackletSwimlane.tsx
demo/frontend/src/common/components/annotations/__generated__/: AddObjectButtonSetObjectNameMutation.graphql.ts  ObjectsToolbarSetObjectNameMutation.graphql.ts
demo/frontend/src/common/components/button/: PlaybackButton.tsx  TrackAndPlayButton.tsx
demo/frontend/src/common/components/options/: DownloadImagesOption.tsx  DownloadMasksOption.tsx  DownloadYoloFormatOption.tsx  DownloadYoloLabelsOption.tsx  ShareSection.tsx
demo/frontend/src/common/components/video/: VideoWorkerContext.ts
demo/frontend/src/common/tracker/: SAM2Model.ts
demo/frontend/src/common/utils/: FileUtils.ts  useSetObjectName.ts
demo/frontend/src/demo/: DemoConfig.tsx  atoms.ts
demo/frontend/src/graphql/: fetchGraphQL.ts
demo/frontend/src/graphql/mutations/: SetObjectNameMutation.graphql
sam2/: automatic_mask_generator.py  build_sam.py  sam2_camera_predictor.py  sam2_realtime_predictor.py  sam2_realtime_predictor_0417legacy.py  sam2_video_predictor.py  train.py
sam2/configs/sam2.1/: sam2.1_hiera_t_512.yaml
sam2/configs/sam2.1_training/: sam2.1_hiera_b+_MOSE_finetune.yaml
sam2/modeling/: sam2_base.py
sam2/modeling/backbones/: hieradet.py  image_encoder.py
sam2/training/: README.md  loss_fns.py  train.py  trainer.py
sam2/training/dataset/: transforms.py  vos_dataset.py  vos_raw_dataset.py  vos_sampler.py
sam2/training/model/: sam2.py
sam2/training/utils/: logger.py
sam2/utils/: misc.py  transforms.py
sav_dataset/example/: sav_000001_auto.json
tools/: generate_videos.py  train_gdino_sam2.py  train_sam_adapter.py  train_vlsam.py  visualize_bridge.py  vlsam_vos_inference.py  vos_inference_bridge.py  vos_inference_centroids.py  vos_inference_dino.py
training/: README.md
(+11 files in other folders)
