[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.5.1",
    "pybind11",
]
build-backend = "setuptools.build_meta"

[project]
name = "SAM-2"
version = "1.0"
description = "SAM 2: Segment Anything in Images and Videos"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Meta AI", email = "segment-anything@meta.com"}
]
maintainers = [
    {name = "Meta AI", email = "segment-anything@meta.com"}
]
keywords = ["computer vision", "segmentation", "AI", "machine learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10.0"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.9",
    "pillow>=9.4.0",
    "submitit>=1.5.3",
]

[project.optional-dependencies]
notebooks = [
    "matplotlib>=3.9.1",
    "jupyter>=1.0.0",
    "opencv-python>=4.7.0",
    "eva-decord>=0.6.1",
]
interactive-demo = [
    "Flask>=3.0.3",
    "Flask-Cors>=5.0.0",
    "av>=13.0.0",
    "dataclasses-json>=0.6.7",
    "eva-decord>=0.6.1",
    "gunicorn>=23.0.0",
    "imagesize>=1.4.1",
    "pycocotools>=2.0.8",
    "strawberry-graphql>=0.243.0",
]
dev = [
    "black==24.2.0",
    "usort==1.0.2",
    "ufmt==2.0.0b2",
    "fvcore>=0.1.5.post20221221",
    "pandas>=2.2.2",
    "scikit-image>=0.24.0",
    "tensorboard>=2.17.0",
    "pycocotools>=2.0.8",
    "tensordict>=0.6.0",
    "opencv-python>=4.7.0",
    "submitit>=1.5.1",
]
all = [
    "SAM-2[notebooks,interactive-demo,dev]"
]

[project.urls]
Homepage = "https://github.com/facebookresearch/sam2"
Repository = "https://github.com/facebookresearch/sam2"
Documentation = "https://github.com/facebookresearch/sam2"
"Bug Tracker" = "https://github.com/facebookresearch/sam2/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["notebooks*", "demo*", "tools*", "sav_dataset*"]

[tool.setuptools.package-data]
sam2 = ["*.yaml", "csrc/*.cu", "csrc/*.cpp", "csrc/*.h", "configs/**/*.yaml"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[project.scripts]
sam2-train = "sam2.train:cli"


# uv configuration
[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]
